@@ -1,3 +1,7 @@
+2009-11-18  Tristan Gingold  <gingold@adacore.com>
+
+	* machoread.c (macho_oso_symfile): Fix typo.  Add comments.
+
 2009-11-17  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* dbxread.c (set_namestring): Remove cast to unsigned.  Check N_STRX
